# livekit-plugins-googlesr

./: PKG-INFO  README.md  setup.cfg
livekit_plugins_googlesr/: __init__.py  stt.py
