[metadata]
name = livekit-plugins-googlesr
version = 0.1.1
description = Google Speech Recognition STT plugin for LiveKit Agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haitham-ramadan/livekit-plugins-googlesr
author = Haitham Ramadan
author_email = haithamramadan5001@gmail.com
license = Apache-2.0
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = 
	SpeechRecognition >= 3.14.3
python_requires = >= 3.9
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
livekit.agents.plugins = 
	googlesr = livekit_plugins_googlesr:GoogleSTT

[egg_info]
tag_build = 
tag_date = 0

